--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,33 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+	<head>
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="{% block metaDescription %}{% endblock %}">
+
+		<title>
+			{% block title %}Welcome
+			{% endblock %}
+		</title>
+
+
+		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+		<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css">
+         <link href="{{asset('assets/css/style.min.css')}}" rel="stylesheet"> 
+        {% block stylesheet %} {% endblock %} 
+        </head> 
+        <body> 
+        <header> {% include "partial/header.html.twig" %} </header> 
+        
+        <main>
+         {% block body %} {% endblock %}
+          <!-- FOOTER --> 
+          <footer class="container-fluid"> {% include "partial/footer.html.twig" %} </footer> 
+        </main> 
+        <script src="{{asset('assets/js/jquery-3.7.1.min.js')}}">> 
+        <script src="{{asset('assets/js/bootstrap.bundle.min.js')}}">> 
+        {% block javascript %}{% endblock %}
+			</body>
+		</head>
+	</html>
